--- a/AgendaFasb/nbproject/project.properties
+++ b/AgendaFasb/nbproject/project.properties
@@ -27,9 +27,13 @@ dist.dir=dist
 dist.jar=${dist.dir}/AgendaFasb.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
+file.reference.xmlpull-1.1.3.1.jar=/Users/Andeson/NetBeansProjects/xstream-1.4.10/lib/xstream/xmlpull-1.1.3.1.jar
+file.reference.xstream-1.4.10.jar=/Users/Andeson/NetBeansProjects/xstream-1.4.10/lib/xstream-1.4.10.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.xstream-1.4.10.jar}:\
+    ${file.reference.xmlpull-1.1.3.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
