--- a/AgendaFasb/nbproject/project.properties
+++ b/AgendaFasb/nbproject/project.properties
@@ -33,7 +33,8 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.xstream-1.4.10.jar}:\
-    ${file.reference.xmlpull-1.1.3.1.jar}
+    ${file.reference.xmlpull-1.1.3.1.jar}:\
+    ${libs.MySQLDriver.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
